# openwrt-builder

./: .envrc  .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
configs/: example.yaml  reference.yaml
layers/example/etc/: dummy-file
openwrt_builder/: .dockerignore  Dockerfile  __init__.py  __main__.py  cli.py  config.py  docker-compose.yml  host.py  internal.py  sdk.py
tests/: conftest.py  test_config.py  test_host.py  test_internal.py  test_sdk.py
